--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-# Theme
+# Site
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: dark
-
-# Site
 locale: ja-JP
 title: akkinoc.dev
 name: Akihiro Kondo
@@ -17,10 +15,7 @@ exclude:
   - README.md
   - LICENSE.txt
 
-# Outputting
-timezone: Asia/Tokyo
-
-# Defaults
+# Front Matter Defaults
 defaults:
   - scope:
       type: posts
@@ -31,3 +26,6 @@ defaults:
       type: pages
     values:
       layout: single
+
+# Outputting
+timezone: Asia/Tokyo
