--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ exclude:
 # Front Matter Defaults
 defaults:
   - scope:
+      path: _posts
       type: posts
     values:
       layout: single
@@ -46,6 +47,7 @@ defaults:
       toc_sticky: true
       share: true
   - scope:
+      path: _pages
       type: pages
     values:
       layout: single
