--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@ author:
   location: Tokyo, Japan
   links:
     - label: Email
-      icon: fas fa-fw fa-envelope-square
+      icon: fas fa-fw fa-envelope
       url: mailto:akkinoc@gmail.com
     - label: Website
       icon: fas fa-fw fa-link
       url: https://akkinoc.dev
     - label: Twitter
-      icon: fab fa-fw fa-twitter-square
+      icon: fab fa-fw fa-twitter
       url: https://twitter.com/akkinoc
     - label: GitHub
-      icon: fab fa-fw fa-github
+      icon: fab fa-fw fa-github-alt
       url: https://github.com/akkinoc
 
 # Reading files
