--- a/_config.yml
+++ b/_config.yml
@@ -38,21 +38,12 @@ footer:
   links: *author_links
 
 # Reading files
-include:
-  - _pages
 exclude:
   - README.md
   - LICENSE.txt
 
 # Front matter defaults
 defaults:
-  - scope:
-      path: _pages
-      type: pages
-    values:
-      layout: single
-      toc: true
-      toc_sticky: true
   - scope:
       path: _posts
       type: posts
@@ -64,5 +55,7 @@ defaults:
       share: true
 
 # Outputting
+permalink: /posts/:categories/:year/:month/:day/:title/
 paginate: 10
+paginate_path: /page:num/
 timezone: Asia/Tokyo
