--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,8 @@ author:
   bio: Software Engineer. ♡ Kotlin, Java, Spring, AWS.
   location: Tokyo, Japan
   links: &author_links
-    - label: Email
-      icon: fas fa-fw fa-envelope
-      url: mailto:akkinoc@gmail.com
     - label: Website
-      icon: fas fa-fw fa-link
+      icon: fas fa-fw fa-home
       url: https://akkinoc.dev
     - label: Twitter
       icon: fab fa-fw fa-twitter
@@ -32,6 +29,9 @@ author:
     - label: Keybase
       icon: fab fa-fw fa-keybase
       url: https://keybase.io/akkinoc
+    - label: Email
+      icon: fas fa-fw fa-envelope
+      url: mailto:akkinoc@gmail.com
 
 # Site footer
 footer:
