--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ minimal_mistakes_skin: dark
 locale: ja-JP
 title: akkinoc.dev
 name: Akihiro Kondo
-description: akkinoc's website.
+description: akkinoc's personal website.
 url: https://akkinoc.dev
 logo: /assets/images/icon-nobg-512x512.svg
 search: true
