Add archive page sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,8 @@ defaults:
       type: archives
     values:
       layout: single
+      sidebar:
+        nav: archives
 
 # Outputting
 permalink: pretty
