--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,12 @@
 main:
   - title: Archives
     url: /archives/posts/
+archives:
+  - title: Archives
+    children:
+      - title: <i class="fas fa-fw fa-calendar"></i> Posts by Year
+        url: /archives/posts/
+      - title: <i class="fas fa-fw fa-folder"></i> Posts by Category
+        url: /archives/categories/
+      - title: <i class="fas fa-fw fa-tag"></i> Posts by Tag
+        url: /archives/tags/
