Use list format for sidebar settings

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ defaults:
       layout: single
       classes: wide
       sidebar:
-        nav: archives
+        - nav: archives
 
 # Outputting
 permalink: pretty
