Hide the sidebar on the post page

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: no-sidebar
       show_date: true
       toc: true
       toc_sticky: true
