--- a/_config.yml
+++ b/_config.yml
@@ -92,3 +92,9 @@ category_archive:
 tag_archive:
   type: liquid
   path: /archives/tags/
+
+# jekyll-target-blank
+target-blank:
+  noopener: true
+  noreferrer: true
+  rel: nofollow
