--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: dark
 locale: ja-JP
-title: akkinoc.dev
+title: 🚧 akkinoc.dev
 description: akkinoc's personal website.
 url: https://akkinoc.dev
 logo: /assets/images/icon-nobg-512x512.svg
