Revert "Update Jekyll config: name"
This reverts commit e5473530c9c1e9bc289b840ac8d4c4f07d2025f0.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: dark
 locale: ja-JP
 title: 🚧 akkinoc.dev
+name: Akihiro Kondo
 description: akkinoc's personal website.
 url: https://akkinoc.dev
 logo: /assets/images/icon-nobg-512x512.svg
