Revert "Indicate that it is under development by title"
This reverts commit 20ee391576b67535719bd841b1268053d2bba304.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           ruby-version: 2.6
           bundler-cache: true
       - name: Build site
-        run: bundle exec jekyll build --config _config.yml,_config.production.yml
+        run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
       - name: Deploy site
