--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,17 @@
 main:
   - title: Home
     url: /
+  - title: Works
+    url: /works/libraries/
   - title: Archive
     url: /archive/posts/
+
+# Works
+works:
+  - title: Works
+    children:
+      - title: <i aria-hidden="true" class="fas fa-fw fa-tools"></i> Libraries
+        url: /works/libraries/
 
 # Archive
 archive:
