--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
 works:
   - title: Works
     children:
-      - title: <i aria-hidden="true" class="fas fa-fw fa-tools"></i> Libraries
+      - title: <i aria-hidden="true" class="fas fa-fw fa-tools"></i> Programing Libraries
         url: /works/libraries/
 
 # Archive
