--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
-name: deploy
-on:
-  push:
-    branches: [main]
+name: build
+on: [push, pull_request]
 env:
   TZ: Asia/Tokyo
 jobs:
-  deploy:
-    name: Deploy
+  build:
+    name: Build
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout Git repository
@@ -23,6 +21,7 @@ jobs:
         env:
           JEKYLL_ENV: production
       - name: Deploy
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
