Change archive navigation icons

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,9 +18,9 @@ works:
 archive:
   - title: Archive
     children:
-      - title: <i aria-hidden="true" class="fas fa-fw fa-calendar"></i> Posts by Year
+      - title: <i aria-hidden="true" class="far fa-fw fa-calendar-alt"></i> Posts by Year
         url: /archive/posts/
-      - title: <i aria-hidden="true" class="fas fa-fw fa-folder"></i> Posts by Category
+      - title: <i aria-hidden="true" class="far fa-fw fa-folder"></i> Posts by Category
         url: /archive/categories/
       - title: <i aria-hidden="true" class="fas fa-fw fa-tag"></i> Posts by Tag
         url: /archive/tags/
