--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,12 @@ updates:
   - package-ecosystem: bundler
     directory: /
     schedule:
-      interval: monthly
+      interval: daily
     labels:
       - type:enhancement
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: monthly
+      interval: daily
     labels:
       - type:enhancement
