Use Numo instead of GSL for classifier-reborn
ref) https://jekyll.github.io/classifier-reborn/

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v4.1.6
         with:
           fetch-depth: 0 # for jekyll-last-modified-at
+      - name: Install APT Packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install liblapacke-dev libopenblas-dev # for classifier-reborn
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.176.0
         with:
