--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout the Git repository
         uses: actions/checkout@v4.1.6
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # for jekyll-last-modified-at
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.176.0
         with:
