--- a/.bundle/config
+++ b/.bundle/config
@@ -1,2 +1,3 @@
 ---
 BUNDLE_PATH: "vendor/bundle"
+BUNDLE_BUILD__NUMO___LINALG: "--with-lapack-lib=/opt/homebrew/opt/lapack/lib --with-openblas-dir=/opt/homebrew/opt/openblas"
