--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build
     runs-on: macos-15
+    permissions:
+      contents: write
     steps:
       - name: Checkout the Git repository
         uses: actions/checkout@v4.2.2
