--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,6 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3.0.1
-      - name: Deploy the site
+      - name: Deploy artifact
         id: deploy
         uses: actions/deploy-pages@v4.0.5
